--- a/.github/workflows/pipelineDev.yml
+++ b/.github/workflows/pipelineDev.yml
@@ -88,8 +88,8 @@ jobs:
             zaproxy/zap-stable \
             zap.sh -daemon -host 0.0.0.0 -port 8080 \
             -config api.key=${{ secrets.ZAP_API_KEY }}
-          echo "⏳ Esperando 30 segundos..."
-          sleep 30
+          echo "Esperando 45 segundos..."
+          sleep 45
 
       - name: ZAP Scan
         run: python zap_scan.py
